# relib

./: README.md  index.html  query.json
Frontend/Graph network/: README.md  api-client.js  graph-data.js  graph-filter.js  graph-highlight.js  graph-init.js  graph.html  large network.html  search.html  styles.css
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  EMBEDDING_GRAPH.md  build_si_ronda_graph.py  example_embedding_graph.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/analyzers/: actor_analyzer.py  agency_analyzer.py  context_analyzer.py  cross_language_analyzer.py  language_analyzer.py  provenance_scorer.py
backend/app/api/routes/: analysis.py  graph.py
backend/app/core/: config.py
backend/app/data/: colonial_institutions.json  colonial_lexicon.json  native_institutions.json
backend/app/models/: graph_models.py  schemas.py
backend/app/services/: analysis_orchestrator.py  graph_query_service.py  knowledge_graph_builder.py  wikipedia_service.py
