[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi[standard]>=0.121.3",
    "helpers>=0.2.0",
    "httpx>=0.28.1",
    "mwparserfromhell>=0.7.2",
    "networkx>=3.5",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "uvicorn[standard]>=0.38.0",
    "wikipedia-api>=0.8.1",
]
